project('pkt_gen', 'c')

# Define the include directory
include_dir = include_directories('include')

src = 'pkt_gen.c'

# Create executables with include directories
executable('b1', src, install: true, include_directories: include_dir)
executable('b2', src, install: true, include_directories: include_dir)
executable('b3', src, install: true, include_directories: include_dir)